--- a/index.html
+++ b/index.html
@@ -77,5 +77,8 @@
 
   </div> <!-- /container -->
 
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
+  <script src="main.js"></script>
+
 </body>
 </html>
