--- a/index.html
+++ b/index.html
@@ -40,36 +40,42 @@
           <div class="panel-heading"><h2>My Basket</h2></div>
 
             <ul class="list-group">
-              <li class="list-group-item list-group-item-warning">
-                <span class="label label-warning pull-right">£10</span>
-
+              <li class="list-group-item">
+                <span class="badge">£10</span>
                 My Product
               </li>
-              <li class="list-group-item list-group-item-warning">
-                <span class="label label-warning pull-right">£10</span>
+              <li class="list-group-item">
+                <span class="badge">£10</span>
                 My Product
               </li>
-              <li class="list-group-item list-group-item-success">
-                <span class="label label-success pull-right">£0</span>
+              <li class="list-group-item">
+                <span class="badge">£10</span>
                 My Product
               </li>
-              <li class="list-group-item list-group-item-warning">
-                <span class="label label-warning pull-right">£10</span>
+              <li class="list-group-item">
+                <span class="badge">£10</span>
                 My Product
               </li>
-              <li class="list-group-item list-group-item-warning">
-                <span class="label label-warning pull-right">£10</span>
+              <li class="list-group-item">
+                <span class="badge">£10</span>
                 My Product
               </li>
-              <li class="list-group-item list-group-item-success">
-                <span class="label label-success pull-right">£0</span>
+              <li class="list-group-item">
+                <span class="badge">£10</span>
                 My Product
               </li>
             </ul>
-
           <div class="panel-footer">
             <strong>Total:</strong>
-            <span class="label label-default pull-right">£40</span>
+            <span class="label label-danger pull-right">£60</span>
+          </div>
+          <div class="panel-footer">
+            <strong>Discount (buy 2 get 1 free):</strong>
+            <span class="label label-success pull-right">-£20</span>
+          </div>
+          <div class="panel-footer">
+            <strong>Final price:</strong>
+            <span class="label label-info pull-right">£40</span>
           </div>
         </div>
       </div>
