--- a/index.html
+++ b/index.html
@@ -1,80 +1,141 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Example Angular App</title>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <style>
-    .product-img {
-      font-size: 50px;
-    }
-  </style>
-</head>
 
-<body>
+	<head>
+		<meta charset="utf-8">
 
-  <div class="container" >
+		<title>Getting Started with Angular.js</title>
 
-    <h1>Example Angular App</h1>
-    <p>&nbsp;</p>
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <div class="row">
-      <div class="col-xs-6">
-        <div class="media">
-          <div class="media-left">
-              <i class="fa fa-cube product-img"></i>
-          </div>
-          <div class="media-body" >
-            <h4 class="media-heading">My Product</h4>
-            <p>Buy 2 get 1 free</p>
-            <p><span class="badge">£10</span></p>
-          </div>
-        </div>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-        <button type="button" class="btn btn-info">Add to Basket</button>
-      </div>
-      <div class="col-xs-6" >
-        <div class="panel panel-default">
-          <div class="panel-heading"><h2>My Basket</h2></div>
+		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/theme/solarized.css" id="theme">
 
-            <ul class="list-group">
-              <li class="list-group-item">
-                <span class="pull-right"><input type="text" value="6"></span>
-                <div class="media">
-                  <div class="media-left">
-                      <i class="fa fa-cube product-img"></i>
-                  </div>
-                  <div class="media-body" >
-                    <h4 class="media-heading">My Product</h4>
-                    <p>Buy 2 get 1 free</p>
-                    <p><span class="badge">£10</span></p>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          <div class="panel-footer">
-            <strong>Total (6 * £10):</strong>
-            <span class="label label-danger pull-right">£60</span>
-          </div>
-          <div class="panel-footer">
-            <strong>Discount (buy 2 get 1 free):</strong>
-            <span class="label label-success pull-right">-£20</span>
-          </div>
-          <div class="panel-footer">
-            <strong>Final price:</strong>
-            <span class="label label-info pull-right">£40</span>
-          </div>
-        </div>
-      </div>
-    </div>
+		<!-- Code syntax highlighting -->
+		<link rel="stylesheet" href="lib/css/zenburn.css">
 
-  </div> <!-- /container -->
+		<!-- Printing and PDF exports -->
+		<script>
+			var link = document.createElement( 'link' );
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+			document.getElementsByTagName( 'head' )[0].appendChild( link );
+		</script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
-  <script src="main.js"></script>
+		<!--[if lt IE 9]>
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
+	</head>
 
-</body>
+	<body>
+
+		<div class="reveal">
+
+			<!-- Any section element inside of this container is displayed as a slide -->
+			<div class="slides">
+				<section>
+					<h1>Angular.js</h1>
+					<h3>Getting started</h3>
+					<p>
+						<small>Workshop by <a href="http://www.jpotapova.info">Jelizaveta Potapova</a> / <a href="http://twitter.com/LisaStoz">@LisaStoz</a></small>
+					</p>
+				</section>
+
+				<section>
+					<h2>Agenda</h2>
+					<ul>
+						<li>Quick Theory Overview</li>
+						<li>Example App - Shopping basket</li>
+						<li>Exercise - DIY</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Quick Theory Overview</h2>
+					<ul>
+						<li>Directive</li>
+						<li>Controller</li>
+						<li>Service</li>
+						<li>Module</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Directive</h2>
+					<p>The only place for DOM manipulation.</p>
+					<p>Can be an element, an attribute or a classname.</p>
+				</section>
+
+				<section>
+					<h2>Controller</h2>
+					<p>A place to manage the state of something:<br>setup initial state,<br>modify the state.</p>
+					<p>UI logic</p>
+				</section>
+
+				<section>
+					<h2>Service</h2>
+					<p>View-independent logic.</p>
+					<p>Share code across controllers.</p>
+				</section>
+
+				<section>
+					<h2>Example App - Shopping basket</h2>
+					<ul>
+						<li>Directive, Controller, Service, Module</li>
+						<li>Angular expressions, Templates and Views</li>
+						<li>Dependency Injection</li>
+						<li>Two-way data binding</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Exercises</h2>
+					<p>Product quantity component</p>
+					<img src="img/quantity.png" />
+					<p>Custom checkbox - yes/no</p>
+					<img src="img/checkbox.png" />
+				</section>
+
+				<section>
+					<h2>Thank you!</h2>
+				</section>
+
+
+			</div>
+
+		</div>
+
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.js"></script>
+
+		<script>
+
+			// Full list of configuration options available at:
+			// https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				controls: true,
+				progress: true,
+				history: true,
+				center: true,
+
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
+
+				// Optional reveal.js plugins
+				dependencies: [
+					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/zoom-js/zoom.js', async: true },
+					{ src: 'plugin/notes/notes.js', async: true }
+				]
+			});
+
+		</script>
+
+	</body>
 </html>
