handout link added

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
 				<section>
 					<h2>Example App - Shopping basket</h2>
+					<p>Handout - <a href="http://bit.ly/1zqepU1">http://bit.ly/1zqepU1</a></p>
 					<ul>
 						<li>Directive, Controller, Service, Module</li>
 						<li>Angular expressions, Templates and Views</li>
